--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=/Users/riticksaha/Library/Android/sdk
-flutter.sdk=/Users/riticksaha/development/flutter
+sdk.dir=C:\\Users\\dev\\AppData\\Local\\Android\\Sdk
+flutter.sdk=e:\\flutter
 flutter.buildMode=debug
 flutter.versionName=2.2.2
